<resources>
    <string name="app_name">RUPizza</string>
    <string name="add_to_order">Add to Order</string>
    <string name="place_order">Place Order</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="back">Back</string>
    <string name="small">Small</string>
    <string name="small_price">8.99</string>
    <string name="zero">0</string>
    <string name="zero_deci">0.00</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="extra_sauce">Extra Sauce</string>
    <string name="price_label">Price $</string>
    <string name="specialty_pizzas">Specialty Pizzas</string>
    <string name="current_order">Current Order</string>
    <string name="order_number">Order Number</string>
    <string name="subtotal_label">Subtotal $</string>
    <string name="sales_tax">Sales Tax $</string>
    <string name="order_total">Order Total $</string>
    <string name="subtotal">Subtotoal</string>
    <string name="toppings">Toppings</string>
    <string name="selected_toppings">Selected</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="toppings_top">Toppings: topping, topping, topping</string>
    <string name="sauce">Sauce</string>
    <string name="tomato">Tomato</string>
    <string name="alfredo">Alfredo</string>
    <string name="pic_description">Pizza Image</string>
    <string name="pic_description2">Pizza Image2</string>
    <string name="pic_description3">Pizza Image3</string>
    <string name="pic_description4">Pizza Image4</string>
    <string name="ru_pizza">RU PIZZA</string>
    <string name="pizza_type">Pizza Type</string>
    <string name="build_own">Build Your Own</string>
    <string name="store_order">Store Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="base_price">Base Price: $19.99</string>


    <string-array name="pizza_type">
        <item>Deluxe</item>
        <item>Supreme</item>
        <item>Meatzza</item>
        <item>Pepperoni</item>
        <item>Seafood</item>
        <item>Hawaiian</item>
        <item>Veggie</item>
        <item>Margherita</item>
        <item>Chonky Cheungers</item>
        <item>Killer Kim</item>

    </string-array>

    <string-array name="toppings">
        <item>Sausage, pepperoni, green pepper, onion, mushroom</item>
        <item>Sausage, pepperoni, ham, green pepper, onion, black olive, mushroom</item>
        <item>Sausage, pepperoni, beef, ham</item>
        <item>Pepperoni</item>
        <item>Shrimp, squid, crab meats</item>
        <item>Pineapple, ham</item>
        <item>Green pepper, onion, black olive, mushroom, corn</item>
        <item>Mozzarella, basil</item>
        <item>Bacon, chicken, corn, basil, mozzarella, mushroom, green pepper, pepperoni</item>
        <item>Sweet potato, corn, ham, black olive, green pepper, onion, mushroom</item>
    </string-array>

    <string-array name="sauces">
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Alfredo</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Tomato</item>
        <item>Sauce: Alfredo</item>
        <item>Sauce: Tomato</item>
    </string-array>

</resources>