<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/openStoreOrder2"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="112dp"
        android:text="@string/store_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="displayStoreOrder"/>

    <Button
        android:id="@+id/openCurrentOrder2"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="112dp"
        android:text="@string/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="displayCurrentOrder"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ru_pizza"
        android:textColor="#BF0323"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <ImageButton
        android:id="@+id/openBuildOwn1"
        android:layout_width="180dp"
        android:layout_height="158dp"
        android:contentDescription="@string/pic_description4"
        android:scaleType="fitCenter"
        android:background="@color/background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        app:srcCompat="@drawable/buildyourown"
        android:onClick="displayBuildOwn"/>

    <ImageButton
        android:id="@+id/openStoreOrder1"
        android:layout_width="176dp"
        android:layout_height="149dp"
        android:layout_marginBottom="168dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/pic_description"
        android:background="@color/background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/storeorder"
        android:onClick="displayStoreOrder"/>

    <ImageButton
        android:id="@+id/openSpecialty1"
        android:layout_width="163dp"
        android:layout_height="157dp"
        android:scaleType="fitCenter"
        android:background="@color/background"

        android:contentDescription="@string/pic_description2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.108"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"
        app:srcCompat="@drawable/specialty"
        android:onClick="displaySpecialty"/>

    <ImageButton
        android:id="@+id/openCurrentOrder1"
        android:layout_width="176dp"
        android:layout_height="149dp"
        android:contentDescription="@string/pic_description3"

        android:layout_marginBottom="168dp"
        android:scaleType="fitCenter"
        android:background="@color/background"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/currentorder"
        android:onClick="displayCurrentOrder"/>

    <Button
        android:id="@+id/openSpecialty2"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:text="@string/specialty_pizzas"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E11010"
        android:textColorLink="#D80707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        android:onClick="displaySpecialty"/>

    <Button
        android:id="@+id/openBuildOwn2"
        android:layout_width="158dp"
        android:layout_height="53dp"
        android:text="@string/build_own"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#E11010"
        android:textColorLink="#D80707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        android:onClick="displayBuildOwn"
        />

</androidx.constraintlayout.widget.ConstraintLayout>